; ModuleID = '/home/carl/AnghaBench/esp-idf/components/heap/extr_multi_heap.c_multi_heap_get_allocated_size_impl.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/heap/extr_multi_heap.c_multi_heap_get_allocated_size_impl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @multi_heap_get_allocated_size_impl(i32 %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  store i32 %0, i32* %3, align 4
  store i8* %1, i8** %4, align 8
  %6 = load i8*, i8** %4, align 8
  %7 = call i32* @get_block(i8* %6)
  store i32* %7, i32** %5, align 8
  %8 = load i32, i32* %3, align 4
  %9 = load i32*, i32** %5, align 8
  %10 = call i32 @assert_valid_block(i32 %8, i32* %9)
  %11 = load i32*, i32** %5, align 8
  %12 = call i32 @is_free(i32* %11)
  %13 = icmp ne i32 %12, 0
  %14 = xor i1 %13, true
  %15 = zext i1 %14 to i32
  %16 = load i32*, i32** %5, align 8
  %17 = call i32 @MULTI_HEAP_ASSERT(i32 %15, i32* %16)
  %18 = load i32*, i32** %5, align 8
  %19 = call i64 @block_data_size(i32* %18)
  ret i64 %19
}

declare dso_local i32* @get_block(i8*) #1

declare dso_local i32 @assert_valid_block(i32, i32*) #1

declare dso_local i32 @MULTI_HEAP_ASSERT(i32, i32*) #1

declare dso_local i32 @is_free(i32*) #1

declare dso_local i64 @block_data_size(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
